--- a/estilos.css
+++ b/estilos.css
@@ -44,11 +44,17 @@ h1{
     display: block;
     border-radius: 30px;
     margin-top: 30px;
+    transition: all 200ms ease-in-out;
 }
 
 nav{
     background-color: #7b4640;
+    height: 65px;
     padding: 6px;
+    width: 100%;
+    top: 0;
+    position: fixed;
+    z-index: 1000;
 }
 
 .flex{
@@ -70,6 +76,7 @@ a{
 .menu a img{
     width: 25px;
     height: 0 auto;
+    transition: all 300ms ease-in-out;
 }
 
 ul{
@@ -85,12 +92,13 @@ ul{
 }
 
 .menu li{
-    margin-right: 50px;
+    margin-right: 30px;
     margin-left: 10px;
 }
 
 .menu li a{
     color: #ffa959;
+    transition: all 300ms ease-in-out;
 }
 
 .bienvenidos{
@@ -123,57 +131,43 @@ h2{
 }
 
 .cafes article{
-    width: 320px;
+    width: 305px;
     height: 350px;
     padding: 30px;
     justify-content: center;
     flex-direction: row;
     text-align: center;
+    background-color: #7B4640;
+    border-radius: 30px;
+    transition: all 300ms ease-in-out;
 }
 
-#cappuccino{
-    background-color: #7B4640;
+.card:hover{
+    transform: scale(101.5%);
 }
 
 h3{
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    color: white;
-    font-size: 20px;
-    margin-bottom: 20px;
+    color: #dc8c5d;
+    font-size: 18px;
+    margin-bottom: 10px;
     margin-top: 9px;
 }
 
-.boton2{
+.cafes a{
     color: white;
-    width: 170px;
-    height: 40px;
-    font-size: 16px;
+    width: 150px;
+    height: 30px;
+    font-size: 14px;
     text-align: center;
-    line-height: 40px;
-    font-weight: 700;
-    background-color: #ffa959;
+    line-height: 30px;
+    font-weight: 600;
+    background-color: #dc8c5d;
     display: block;
     border-radius: 30px;
-    margin-top: 30px;
-}
-
-#espresso{
-    background-color: #BC6F41;
-}
-
-.boton3{
-    color: white;
-    width: 170px;
-    height: 40px;
-    font-size: 16px;
-    text-align: center;
-    line-height: 40px;
-    font-weight: 700;
-    background-color: #7B4640;
-    display: block;
-    border-radius: 30px;
-    margin-top: 30px;
+    margin-top: 20px;
+    transition: all 200ms ease-in-out;
 }
 
 .cafes{
@@ -183,22 +177,16 @@ h3{
     width: 960px;
 }
 
-#mocca{
-    background-color: #FFA959;
+.cafes img{
+    width: 140px;
+    height: 0 auto;
+    margin-top: -10px;
 }
 
-.boton4{
+.cafes p{
+    font-size: 12.5px;
+    font-weight: 400;
     color: white;
-    width: 170px;
-    height: 40px;
-    font-size: 16px;
-    text-align: center;
-    line-height: 40px;
-    font-weight: 700;
-    background-color: #BC6F41;
-    display: block;
-    border-radius: 30px;
-    margin-top: 30px;
 }
 
 #conocenos{
@@ -245,6 +233,29 @@ h3{
     font-weight: 300;
 }
 
+.productos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 700px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.galeria a{
+    transition: all 200ms ease;
+    margin: 5px;
+}
+
+.galeria a:hover{
+    transform: scale(102%);
+}
+
+.galeria img{
+    border-radius: 10px;
+}
+
 .footer{
     display: flex;
     margin-left: 50px;
@@ -254,6 +265,10 @@ h3{
     margin-left: 50px;
     margin-right: 10px;
     padding-top: 4px;
+}
+
+.footer img{
+    transition: all 300ms ease-in-out;
 }
 
 .end{
